feat: 集成 SpringDoc OpenAPI 文档
- 添加 springdoc-openapi-ui 1.7.0 依赖
- 创建 OpenApiConfig 配置类，支持 API 分组
- 为所有 Controller 添加 @Tag, @Operation, @Parameter 注解
- 修复 Java 8 兼容性问题（ProcessHandle -> ManagementFactory, List.of -> Collections.emptyList）

访问地址：/swagger-ui.html